--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "erc-tokens",
-  "version": "0.1.0",
+  "version": "0.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -12,7 +12,9 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
     "@openzeppelin/contracts": "^4.9.2",
+    "dotenv": "^16.3.1",
     "hardhat": "^2.17.0",
+    "hardhat-deployed-records": "^0.2.1",
     "hardhat-publish-typechain": "^0.3.1"
   }
 }
